--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,17 @@ nav a {
     border: 2px solid black;
     margin: auto;
 } */
-.s1 {
+#s1 {
     background-color: red;
+    color: yellow;
+}
+
+#s2 {
+    background-color: green;
+    color: yellow;
+}
+
+#s3 {
+    background-color: yellow;
+    color: green;
 }
